--- a/functions/package.json
+++ b/functions/package.json
@@ -10,7 +10,9 @@
   "license": "ISC",
   "dependencies": {
     "@cloudant/cloudant": "^4.5.1",
-    "express": "^4.18.2"
+    "@ibm-cloud/cloudant": "^0.5.5",
+    "express": "^4.18.2",
+    "ibm-cloud-sdk-core": "^4.1.0"
   },
   "description": ""
 }
